# toksearch

./: .gitattributes  .gitignore  404.html  MANIFEST.in  README.md  build_package.sh  cleanit  environment.yml  index.html  latest  mkdocs.yml  pixi.toml  print_version.py  pyproject.toml  setup.cfg  setup.py  versions.json
2.0.X/: 404.html  docs_environment.yaml  index.html  sitemap.xml
2.1.X/: 404.html  index.html  objects.inv  sitemap.xml
2.2.X/: 404.html  index.html  sitemap.xml
2.4.X/: 404.html  docs_environment.yaml  index.html  sitemap.xml
Distributed_computing/: index.html
Parallelization/: index.html
Working_with_Signals/: index.html
backend_serial/: index.html
backend_spark/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: Aggregating_Data.ipynb  Distributed_computing.ipynb  LLM_Tutorial.ipynb  Parallelization.ipynb  SQL.ipynb  Using_with_Xarray.ipynb  Working_with_Signals.ipynb  backend_multiprocessing.md  backend_ray.md  backend_serial.md  backend_spark.md  distributed_computing.md  docs_environment.yaml  index.md  installation.md  llm.md  mds.md  overview.ipynb  pipeline.md  record.md  record_set.md  signal.md  sql.md  tutorial.ipynb
overview/: index.html
pipeline/: index.html
recipe/: conda_build_config.yaml  meta.yaml  recipe.yaml  variants.yaml
scripts/: dfi_stats.py  toksearch_example.py  toksearch_shape  toksearch_submit
src/: ell1.h  ell1_mex.c  ell1_python.c  ell1lib.c
tests/: mock_utils.py  test_aligner.py  test_ell1.py  test_imas_mapper.py  test_llm_backends_anthropic.py  test_llm_backends_base.py  (+30 more)
(+172 files in other folders)
